tests/js_error/source_locations/statement/for_await/iterator_unpack_result_module.exp
TypeError: iterator's next method must return an object
   ┌ tests/js_error/source_locations/statement/for_await/iterator_unpack_result_module.js:12:20
   |
12 |   for await (var x of iter) {}
   |                    ^
Stack trace:
  at next (<native>)
  at foo (tests/js_error/source_locations/statement/for_await/iterator_unpack_result_module.js:12:20)
  at <module> (tests/js_error/source_locations/statement/for_await/iterator_unpack_result_module.js:15:7)